rename render file for navbar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<%= render 'layouts/header' %>
+<%= render 'layouts/navbar' %>
 <%= yield %>
 <p>Copyright Sterling Houghton 2014</p>
 </body>
