add bootstrap styling to forms and links

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,9 @@
 </head>
 <body>
 <%= render 'layouts/navbar' %>
-<%= yield %>
-<p>Copyright Sterling Houghton 2014</p>
+<div class="container-fluid">
+  <%= yield %>
+  <p>Copyright Sterling Houghton 2014</p>
+</div>
 </body>
 </html>
