--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,4 +1,8 @@
-<h1>Listing restaurants</h1>
+<div class="jumbotron">
+  <h2>Yelp is the best way to find reviews on local restaurants.</h2>
+  <h3>Explore your favorite eateries and places in your community.<br>
+      Leave reviews for your fellow foodies.</h3>
+</div>
 
 <table class="table table-hover table-condensed">
   <thead>
