--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -33,3 +33,4 @@
 <br>
 
 <%= link_to 'New Restaurant', new_restaurant_path, class: "btn btn-link" %>
+<%= image_tag "https://s3-us-west-2.amazonaws.com/yelpper/happy_footer.png" %>
