--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -25,6 +25,18 @@
     </p>
 
     <%= link_to 'Write a Review', new_restaurant_review_path(@restaurant), class:"btn btn-default" %>
+
+    <br>
+    <br>
+
+    <iframe
+      width="230"
+      height="230"
+      frameborder="0" style="border:0"
+      src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCxHgfAq2lG00PjnYc478iA4UsDmpXcZSc
+        &q=<%= @restaurant.address.parameterize %>&zoom=14">
+    </iframe>
+
   </div>
   <div class="col-md-9">
     <% if @reviews.blank? %>
